--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.2",
     "mongoose": "^6.1.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
